# src/routes/dairy.js
@@ -11,15 +11,10 @@ const protect = require("../middleware/protect.js");
 
 const router = express.Router();
 
-router.get("/entries/:userId", protect, getAllEntries);
+router.get("/entries", protect, getAllEntries);
 router.get("/entry/:entryId", protect, getEntry);
-router.post("/create/:userId", protect, createEntry);
+router.post("/create", protect, createEntry);
 router.put("/update/:entryId", protect, updateEntry);
 router.delete("/delete/:entryId", protect, deleteEntry);
-
-// router.get("/:userId/entries/:entryId", getAllTasks);
-// router.post("/:userId/entries", createTask);
-// router.put("/:userId/entries/:entryId", updateTask);
-// router.delete("/:userId/entries/:entryId", deleteTask);
 
 module.exports = router;
